--- a/assets/app.css
+++ b/assets/app.css
@@ -69,7 +69,7 @@ html {
   min-width: 1032px;
   background: #fff;
   box-shadow: 0 1px 0px rgba(26, 26, 26, 0.1);
-  height: 53px;
+  height: 5rem;
   font-size: 16px;
 }
 
@@ -78,7 +78,7 @@ a {
   text-decoration: none;
 }
 
-a:hover {
+.bottom-info a:hover {
   color: #f60;
   text-decoration: none !important;
 }
