--- a/assets/app.css
+++ b/assets/app.css
@@ -66,11 +66,11 @@ html {
   z-index: 89;
   top: 0;
   width: 100%;
-  min-width: 1032px;
   background: #fff;
   box-shadow: 0 1px 0px rgba(26, 26, 26, 0.1);
   height: 5rem;
   font-size: 16px;
+  transition: all 2.2s;
 }
 
 a {
