--- a/assets/iconfont/iconfont.css
+++ b/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2939036 */
-  src: url('iconfont.woff2?t=1667185456031') format('woff2'),
-       url('iconfont.woff?t=1667185456031') format('woff'),
-       url('iconfont.ttf?t=1667185456031') format('truetype');
+  src: url('iconfont.woff2?t=1668215426976') format('woff2'),
+       url('iconfont.woff?t=1668215426976') format('woff'),
+       url('iconfont.ttf?t=1668215426976') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,74 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-lianjie3:before {
+  content: "\e659";
+}
+
+.icon-disanfangjianbolianjie:before {
+  content: "\e67a";
+}
+
+.icon-lianjie4:before {
+  content: "\100bd";
+}
+
+.icon-lianjie5:before {
+  content: "\100c0";
+}
+
+.icon-aui-icon-qq:before {
+  content: "\e62e";
+}
+
+.icon-weibo:before {
+  content: "\e63d";
+}
+
+.icon-weixin:before {
+  content: "\e630";
+}
+
+.icon-QQ:before {
+  content: "\e65f";
+}
+
+.icon-qq:before {
+  content: "\e631";
+}
+
+.icon-QQ1:before {
+  content: "\e882";
+}
+
+.icon-qq1:before {
+  content: "\e684";
+}
+
+.icon-weibo1:before {
+  content: "\e632";
+}
+
+.icon-weixin1:before {
+  content: "\e63b";
+}
+
+.icon-weibo2:before {
+  content: "\e666";
+}
+
+.icon-QQ2:before {
+  content: "\e667";
+}
+
+.icon-shejiaotubiao-06:before {
+  content: "\e641";
+}
+
+.icon-weixin2:before {
+  content: "\e634";
 }
 
 .icon-tupian:before {
