--- a/assets/app.css
+++ b/assets/app.css
@@ -148,3 +148,10 @@ a {
 .is-ellipsis-3 {
   -webkit-line-clamp: 3;
 }
+
+/*自定义buefy*/
+.select select:focus, .taginput .taginput-container.is-focusable:focus, .textarea:focus, .input:focus, .select select.is-focused, .taginput .is-focused.taginput-container.is-focusable, .is-focused.textarea, .is-focused.input, .select select:active, .taginput .taginput-container.is-focusable:active, .textarea:active, .input:active, .select select.is-active, .taginput .is-active.taginput-container.is-focusable, .is-active.textarea, .is-active.input {
+  border-color: #007fff;
+  -webkit-box-shadow: 0 0 0 0.125em rgb(121 87 213 / 25%);
+  box-shadow: 0 0 0 0.125em rgb(121 87 213 / 25%);
+}
