--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -1,5 +1,5 @@
 
-:root[theme=light] {
+#app[theme=light] {
   --color-basic-50: #ffffff;
   --color-basic-75: #fafafa;
   --color-basic-100: #f8f8f8;
@@ -51,9 +51,10 @@
   --border-post-signature: var(--color-primary);
   --border-catalog: #eaeaea;
   --border-md-details: rgb(234, 234, 234);
+  --bg-topic:#fff;
 }
 
-:root[theme=dark] {
+#app[theme=dark] {
   --color-basic-50: #181a1b;
   --color-basic-75: #2f2f2f;
   --color-basic-100: #323232;
@@ -105,6 +106,7 @@
   --border-post-signature: var(--color-primary);
   --border-catalog: #272a3a;
   --border-md-details: rgba(255, 255, 255, .2);
+  --bg-topic:#242526;
 }
 
 
