--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -1,5 +1,5 @@
 
-#app[theme=light] {
+body[theme=light] {
   --color-basic-50: #ffffff;
   --color-basic-75: #fafafa;
   --color-basic-100: #f8f8f8;
@@ -52,9 +52,11 @@
   --border-catalog: #eaeaea;
   --border-md-details: rgb(234, 234, 234);
   --bg-topic:#fff;
+  --primary-text:#333;
+  --secondary-text: #65676B;
 }
 
-#app[theme=dark] {
+body[theme=dark] {
   --color-basic-50: #181a1b;
   --color-basic-75: #2f2f2f;
   --color-basic-100: #323232;
@@ -107,6 +109,8 @@
   --border-catalog: #272a3a;
   --border-md-details: rgba(255, 255, 255, .2);
   --bg-topic:#242526;
+  --primary-text:#E4E6EB;
+  --secondary-text: #B0B3B8;
 }
 
 
