--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -52,8 +52,10 @@ body[theme=light] {
   --border-catalog: #eaeaea;
   --border-md-details: rgb(234, 234, 234);
   --bg-topic:#fff;
+  --bg-app:#f6f6f6;
   --primary-text:#333;
   --secondary-text: #65676B;
+  --bg-select-hover:rgba(148, 108, 230, .05);
 }
 
 body[theme=dark] {
@@ -109,23 +111,9 @@ body[theme=dark] {
   --border-catalog: #272a3a;
   --border-md-details: rgba(255, 255, 255, .2);
   --bg-topic:#242526;
+  --bg-app:#131415;
   --primary-text:#E4E6EB;
   --secondary-text: #B0B3B8;
+  --bg-select-hover:rgba(58, 59, 60,0.5);
 }
-
-
-
-@color-basic-50: var(--color-basic-50);
-@color-basic-75: var(--color-basic-75);
-@color-basic-100: var(--color-basic-100);
-@color-basic-200: var(--color-basic-200);
-@color-basic-300: var(--color-basic-300);
-@color-basic-400: var(--color-basic-400);
-@color-basic-500: var(--color-basic-500);
-@color-basic-600: var(--color-basic-600);
-@color-basic-700: var(--color-basic-700);
-@color-basic-800: var(--color-basic-800);
-@color-basic-900: var(--color-basic-900);
-@bg-body: var(--bg-body);
-@bg-header: var(--bg-header);
 
