--- a/assets/app.css
+++ b/assets/app.css
@@ -158,7 +158,7 @@ a:hover {
 
 /*自定义buefy*/
 .select select:focus, .taginput .taginput-container.is-focusable:focus, .textarea:focus, .input:focus, .select select.is-focused, .taginput .is-focused.taginput-container.is-focusable, .is-focused.textarea, .is-focused.input, .select select:active, .taginput .taginput-container.is-focusable:active, .textarea:active, .input:active, .select select.is-active, .taginput .is-active.taginput-container.is-focusable, .is-active.textarea, .is-active.input {
-  border-color: #007fff;
-  -webkit-box-shadow: 0 0 0 0.125em rgb(121 87 213 / 25%);
-  box-shadow: 0 0 0 0.125em rgb(121 87 213 / 25%);
+  border-color: #1e80ff!important;
+  -webkit-box-shadow: 0 0 0 0.125em rgb(30 128 255 / 25%);
+  box-shadow: 0 0 0 0.125em rgb(30 128 255 / 25%);
 }
