--- a/assets/css/element-ui-reset.less
+++ b/assets/css/element-ui-reset.less
@@ -25,3 +25,44 @@
   border-top-color: var(--color-basic-75)!important;
   border-bottom-color: var(--color-basic-75)!important;
 }
+.el-menu {
+  background: var(--bg-topic)!important;
+}
+.el-menu--horizontal>.el-menu-item.is-active {
+  color: var(--primary-text)!important;
+}
+.el-menu--horizontal>.el-menu-item:not(.is-disabled):focus, .el-menu--horizontal>.el-menu-item:not(.is-disabled):hover {
+  background-color: var(--bg-topic)!important;
+  color: var(--primary-text)!important;
+}
+.el-menu--horizontal>.el-menu-item {
+  color: var(--color-basic-600)!important;
+}
+.el-menu--horizontal>.el-submenu .el-submenu__title {
+  color: var(--color-basic-600)!important;
+}
+.el-menu--horizontal>.el-submenu .el-submenu__title:hover {
+  background-color: var(--bg-topic)!important;
+  color: var(--primary-text)!important;
+}
+.el-menu--horizontal .el-menu .el-menu-item, .el-menu--horizontal .el-menu .el-submenu__title {
+  background-color: var(--bg-topic)!important;
+  color: var(--color-basic-600)!important;
+}
+.el-menu--horizontal>.el-submenu.is-active .el-submenu__title {
+  color: var(--primary-text)!important;
+}
+.el-menu--horizontal .el-menu-item:not(.is-disabled):focus, .el-menu--horizontal .el-menu-item:not(.is-disabled):hover {
+  background-color: var(--bg-topic)!important;
+  color: var(--primary-text)!important;
+}
+.el-menu--horizontal .el-menu .el-menu-item.is-active, .el-menu--horizontal .el-menu .el-submenu.is-active>.el-submenu__title {
+  color: var(--primary-text)!important;
+}
+.el-empty{
+  background-color: var(--bg-topic)!important;
+}
+.el-menu-item.is-disabled {
+  opacity: 1!important;
+}
+
