--- a/assets/css/dark.scss
+++ b/assets/css/dark.scss
@@ -25,5 +25,8 @@ body[theme='dark'] {
     background-color:#242526!important;
     color: #fff!important;
   }
+  .dropdown-ul{
+    border: 1px solid rgba(255, 255, 255, .15)!important;
+  }
 }
 
