--- a/assets/css/element-ui-reset.less
+++ b/assets/css/element-ui-reset.less
@@ -65,4 +65,30 @@
 .el-menu-item.is-disabled {
   opacity: 1!important;
 }
-
+.el-card{
+  background-color: var(--bg-topic)!important;
+  color: var(--primary-text)!important;
+  border-color: var(--color-basic-100)!important;
+}
+.el-form-item__label{
+  color: var(--secondary-text)!important;
+}
+.el-breadcrumb__inner {
+  color: var(--primary-text)!important;
+}
+.el-input__inner,.el-textarea__inner{
+  background-color: var(--bg-topic)!important;
+  color: var(--secondary-text)!important;
+  border-color: var(--color-basic-200)!important;
+}
+.el-divider{
+  background-color: var(--color-basic-200)!important;
+}
+.el-card__header{
+  border-bottom:1px solid var(--color-basic-200)!important;
+}
+.el-input-group__append, .el-input-group__prepend{
+  background-color: var(--color-basic-100)!important;
+  color: var(--secondary-text)!important;
+  border: 1px solid var(--color-basic-200)!important;
+}
