--- a/assets/css/element-ui-reset.less
+++ b/assets/css/element-ui-reset.less
@@ -79,7 +79,13 @@
 .el-input__inner,.el-textarea__inner{
   background-color: var(--bg-topic)!important;
   color: var(--secondary-text)!important;
-  border-color: var(--color-basic-200)!important;
+  border-color: var(--color-basic-200) !important;
+}
+.el-input__inner:focus {
+  border-color: #409EFF!important;
+}
+.el-textarea__inner:focus {
+  border-color: #409EFF!important;
 }
 .el-divider{
   background-color: var(--color-basic-200)!important;
