--- a/assets/css/dark.scss
+++ b/assets/css/dark.scss
@@ -31,5 +31,11 @@ body[theme='dark'] {
   .dropdown-ul{
     border: 1px solid rgba(255, 255, 255, .15)!important;
   }
+  .content-post{
+    color:#c2c2c2;
+  }
+  .langs_zh{
+    color: #277927;
+  }
 }
 
