--- a/assets/css/element-ui-reset.less
+++ b/assets/css/element-ui-reset.less
@@ -98,3 +98,6 @@
   color: var(--secondary-text)!important;
   border: 1px solid var(--color-basic-200)!important;
 }
+.el-loading-mask{
+  background-color: var(--bg-app)!important;
+}
