--- a/assets/css/dark.scss
+++ b/assets/css/dark.scss
@@ -51,5 +51,11 @@ body[theme='dark'] {
     color: #fafafa!important;
     background-color: rgba(232, 236, 239, 0.1);
   }
+  .el-pagination.is-background .btn-next.disabled, .el-pagination.is-background .btn-next:disabled, .el-pagination.is-background .btn-prev.disabled, .el-pagination.is-background .btn-prev:disabled, .el-pagination.is-background .el-pager li.disabled {
+    color: #606266;
+  }
+  .el-pagination.is-background .btn-next, .el-pagination.is-background .btn-prev, .el-pagination.is-background .el-pager li {
+    color: #C0C4CC;
+  }
 }
 
