--- a/assets/css/dark.scss
+++ b/assets/css/dark.scss
@@ -47,7 +47,7 @@ body[theme='dark'] {
   .essay-container{
     background-color: #131415;
   }
-  .post-header .category a{
+  .post-list-cat a{
     color: #fafafa!important;
     background-color: rgba(232, 236, 239, 0.1);
   }
